# Dio_windows

Python/1_data_e_hora/: strp_time.py  time_delta.py
Python/2_Manipulação_de_arquivos/: 4_tratamento_erro.py  example.txt  lorem.txt  teste.txt
Python/Manipulação_de_arquivos/: 5_boas_praticas.py  6_csv.py
Python/basic/: 1_gerando_relatorio_de_pedidos_por_embalagem.py  2_exibindo_exportacoes_agrupadas_por_pais.py
Python/basic/1_data_e_hora/: timedelta_tests.py
Python/basic/2_Manipulação_de_arquivos/: 1_operacao_leitura.py  2_operacao_escrita.py  3_os_shutil.py  5_boas_praticas.py  basic.py
Python/basic/desafios/: 2_list_conta.py  5_resolvendo_calculos_com_python.py  conta_bancaria.py
Python/basic/desafios/1_POO/: 1_gestao_de_produtos_bancarios.py  3_cupons_de_descontos.py  3_mensagem_celular.py  4_email_separating.py  4_sistema_de_compras.py  5_resolvendo_calculos_com_python.py  5_transformar_datas.py  6_celsius_para_farehneit.py  7_calculando_a_capacidade_de_armazenagem.py
Python/data_e_hora/: basic.py  py_tz.py
Python/desafios/1_POO/: 1_criar_usuario_internet.py  2_verificacao_de_pacote_de_internet.py  3_mensagem_celular.py
Python/fast_api/1_simple.api/: main.py
Python/fast_api/fast_api/: pyproject.toml
Python/fast_api/nome_do_projeto/: pyproject.toml
Python/flask/: 1_app.py  2_app.py  3_flask_routes.py  4_variables_with_flask.py  app.py
Python/flask/projectName/: settings.py
Python/mongodb/1_json/: 1_usuario.json  2_json.json
Python/sqlite_3/: 01_conexao.py  meu_banco.db
pandas/: 1_leitura_dos_dados.py  2_leitura_dos_dados.py
(+4 files in other folders)
